# mat-chalmers

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Lunch at Chalmers.html  Main.hs  Makefile  README.md  brittany.yaml  cabal.config  cabal.project.freeze  demo.html  docker-compose.yml  flake.nix  justfile  main.hs  mat-chalmers.cabal  mat-dtek.cabal  shell.nix  stack-7.10.3.yaml  stack-8.0.1.yaml  stack.yaml  supervisord.conf  tailwind.config.js  template.html  update.sh
.github/workflows/: haskell-ci.yml  haskell.yml  publish-docker-image.yml  try-build-docker-image.yml
app/: Main.hs
data/: template.mustache
src/: Config.hs  Einstein.hs  M.hs  Main.hs  Model.hs  Util.hs  V.hs  View.hs
src/M/: Einstein.hs  Internal.hs  Karen.hs  KarenJSON.hs  Types.hs  Wijkanders.hs
src/Model/: Einstein.hs  Karen.hs  KarenGraphQLApi.hs  KarenJSON.hs  Linsen.hs  Types.hs  Wijkanders.hs
static/: style.css
templets/: index.html
test/: 190517 wijkanders.html  190913 wijkanders.html  241016 wijkanders.html  Main.hs  linsen1.json  linsen2.json  linsen3.json  linsen4.json  linsen5.json
