cabal-version: 3.0
name: mat-chalmers
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Adam Sandberg Eriksson
maintainer: adam@sandbergericsson.se
category: Web
build-type: Simple
Tested-With: GHC ==9.4.5
data-files:
           static/style.css
           static/icon.png
           static/fonts/AnonymousPro-Bold.ttf
           static/fonts/AnonymousPro-BoldItalic.ttf
           static/fonts/AnonymousPro-Italic.ttf
           static/fonts/AnonymousPro-Regular.ttf
           static/fonts/OFL.txt

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  exposed-modules: Model
                 , Model.Types
                 , Model.Karen
                 , Model.Wijkanders
                 , View
                 , Config
                 , Util

  -- Prefer to put the dependencies with versions here, and the ones without
  -- versions in the `build-depends` blocks below.
  build-depends: aeson >= 2.1.2.1 && < 3.0
               , attoparsec >= 0.14.4 && < 0.15
               , base >=4.17.1.0 && < 5.0
               , bytestring >=0.11 && < 0.12
               , css-text >= 0.1.3.0 && < 0.2
               , exceptions >= 0.10.5 && < 0.11.0
               , heredoc == 0.2.0.0
               , logging-effect >= 1.4.0 && <= 2.0
               , microlens-platform >= 0.4.3.3 && < 0.5
               , lucid >= 2 && < 3
               , mtl == 2.2.2
               , old-locale == 1.0.0.7
               , prettyprinter == 1.7.1
               , req >= 3.13 && < 4.0
               , retry == 0.8.1.2
               , safe == 0.3.19
               , tagsoup == 0.14.8
               , text >= 2.0 && <= 3.0
               , file-embed >= 0.0.15.0 && < 1.0
               , thyme >= 0.4 && <= 0.5
               , word8 == 0.1.3

executable mat-chalmers
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  hs-source-dirs: app
  build-depends: mat-chalmers
               , base
               , bytestring
               , exceptions
               , file-embed
               , microlens-platform
               , logging-effect
               , mtl
               , req
               , prettyprinter
               , scotty >= 0.12.1 && < 0.13
               , time >= 1.12 && < 1.13
               , wai-extra >= 3.1.13.0 && < 4.0
               , wai-middleware-static-embedded == 0.1.0.0
               , async >= 2.2.4 && <= 3.0
  default-language: Haskell2010

Test-Suite test-mat
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , mat-chalmers
               , hspec >= 2.10.10 && < 3.0
               , HUnit >= 1.6.2.0 && < 2.0
               , text
               , thyme >= 0.3.5.5
