name: mat-chalmers
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Adam Sandberg Eriksson
maintainer: adam@sandbergericsson.se
category: Web
build-type: Simple
cabal-version: >=1.10
Tested-With: GHC ==9.0.2
data-files:
           static/style.css
           static/icon.png
           static/fonts/AnonymousPro-Bold.ttf
           static/fonts/AnonymousPro-BoldItalic.ttf
           static/fonts/AnonymousPro-Italic.ttf
           static/fonts/AnonymousPro-Regular.ttf
           static/fonts/OFL.txt

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  exposed-modules: Model
                 , Model.Types
                 , Model.Karen
                 , Model.Wijkanders
                 , View
                 , Config
                 , Util

  build-depends: aeson
               , attoparsec
               , base >=4.15.0
               , bytestring >=0.10.8.2 && <0.12
               , css-text
               , exceptions == 0.10.4
               , heredoc == 0.2.0.0
               , http-client
               , http-client-tls >= 0.3.6.3 && <= 0.4
               , logging-effect >= 1.4.0 && <= 2.0
               , microlens-platform
               , lucid >= 2
               , mtl == 2.2.2
               , old-locale == 1.0.0.7
               , prettyprinter == 1.7.1
               , safe == 0.3.19
               , tagsoup == 0.14.8
               , text >= 2.0 && <= 3.0
               , file-embed
               , thyme
               , word8 == 0.1.3

executable mat-chalmers
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  hs-source-dirs: app
  build-depends: mat-chalmers
               , base >= 4.15.0
               , bytestring
               , file-embed
               , http-client-tls
               , microlens-platform
               , logging-effect
               , mtl
               , scotty
               , time == 1.9.3
               , wai-extra
               , wai-middleware-static-embedded == 0.1.0.0
               , async >= 2.2.4 && <= 3.0
  default-language: Haskell2010

Test-Suite test-mat
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends: base >= 4.15.0
               , bytestring
               , mat-chalmers
               , hspec == 2.7.10
               , HUnit == 1.6.2.0
               , text
               , thyme == 0.3.5.5
