cabal-version: 3.6
name: mat-chalmers
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Nor Führ
maintainer: nor@acorneroftheweb.com
category: Web
build-type: Simple
Tested-With: GHC ==9.6.6
data-files:
           static/style.css
           static/icon.png

library
  default-language: GHC2021
  hs-source-dirs: src
  ghc-options: -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  exposed-modules: Model
                 , Model.Types
                 , Model.Karen
                 , Model.Linsen
                 , Model.Wijkanders
                 , View
                 , Config
                 , Util

  -- Prefer to put the dependencies with versions here, and the ones without
  -- versions in the `build-depends` blocks below.
  build-depends: aeson >= 2.1.2.1 && < 3.0
               , attoparsec >= 0.14.4 && < 0.15
               , base >=4.18.2.0 && < 5.0
               , bytestring >=0.11 && < 0.12
               , effectful >= 2.4.0.0 && < 3.0.0.0
               , log-effectful >= 1.0.0.0 && < 2.0.0.0
               , heredoc >= 0.2.0.0 && < 0.3
               , microlens-platform >= 0.4.3.5 && < 0.5
               , lucid >= 2.11.1 && < 3
               , prettyprinter == 1.7.1
               , wreq >= 0.5.4.2 && < 1.0.0.0
               , safe >= 0.3.21 && < 0.4
               , tagsoup == 0.14.8
               , text >= 2.0 && <= 3.0
               , file-embed >= 0.0.16.0 && < 1.0
               , thyme >= 0.4 && <= 0.5
               , word8 == 0.1.3
               , extra >= 1.7.16 && <= 1.8
               , vector-space >= 0.16 && <0.18

executable mat-chalmers
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wunused-binds -Wunused-imports -Wcompat
  hs-source-dirs: app
  build-depends: mat-chalmers
               , base
               , bytestring
               , effectful >= 2.4.0.0 && < 3.0.0.0
               , log-effectful >= 1.0.0.0 && < 2.0.0.0
               , log-base >= 0.12.0.0 && < 1.0.0.0
               , file-embed
               , microlens-platform
               , text
               , time >= 1.12.2 && < 1.13
               , twain >= 2.1.2.0 && < 3.0.0.0
               , wai-extra >= 3.1.14 && < 4.0
               , wai-middleware-static-embedded == 0.1.0.0
               , warp >= 3.4.0 && < 4.0.0
               , async >= 2.2.5 && <= 3.0
  default-language: GHC2021

Test-Suite test-mat
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: GHC2021
  build-depends: base
               , bytestring
               , mat-chalmers
               , aeson >= 2.1.2.1 && < 3.0
               , hspec >= 2.11.8 && < 3.0
               , HUnit >= 1.6.2.0 && < 2.0
               , text
               , thyme >= 0.4 && <= 0.5
